<resources>
    <!-- Movies Database Configs -->
    <string name="movies_database_api_host" translatable="false">https://api.themoviedb.org/</string>
    <string name="movies_database_api_key" translatable="false">[your themoviedb.org api key goes here]</string>
    <string name="movies_database_img_path" translatable="false">https://image.tmdb.org/t/p/w185/</string>

    <!-- Content Provider Configs -->
    <string name="content_authority" translatable="false">com.paulocaldeira.movies</string>

    <!-- Strings -->
    <string name="app_name">Movies</string>
    <string name="top_rated">Top Rated</string>
    <string name="favorites">Favorites</string>
    <string name="most_popular">Popular</string>
    <string name="details">Details</string>
    <string name="synopsis">Synopsis</string>
    <string name="original_title">Original Title</string>
    <string name="year">Year</string>
    <string name="rate">Rate</string>
    <string name="please_check_your_internet_connection">Please check your internet connection</string>
    <string name="an_error_occurred_please_try_again">An error occurred, please try again.</string>
    <string name="no_results_were_found">No results were found</string>
    <string name="added_to_favorites">Added to favorites</string>
    <string name="removed_from_favorites">Removed from favorites</string>
    <string name="add_to_favorites">Add to favorites</string>
    <string name="trailers">Trailers</string>
    <string name="reviews">Reviews</string>
    <string name="youtube_url" translatable="false">https://www.youtube.com/watch?v=</string>
    <string name="transition_poster" translatable="false">poster</string>
</resources>
