<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.NestedScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.paulocaldeira.movies.DetailsActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:orientation="vertical">

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:background="@color/colorAccent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"

                android:orientation="horizontal"
                android:weightSum="10">

                <LinearLayout
                    android:id="@+id/ll_rate_bar"

                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_gravity="start"
                    android:layout_weight="0"

                    android:background="@color/whiteTransparent"

                    android:orientation="horizontal"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                android:orientation="horizontal"

                android:padding="@dimen/header_padding">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"

                    android:text="@string/rate"

                    android:gravity="center_horizontal|start"
                    style="@style/TextAppearance.AppCompat.Large.Inverse"/>

                <TextView
                    android:id="@+id/tv_rate"

                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"

                    android:text="0.0"

                    android:gravity="center_horizontal|end"
                    style="@style/TextAppearance.AppCompat.Large.Inverse"/>

            </LinearLayout>

        </FrameLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"

            android:paddingTop="@dimen/activity_padding"
            android:paddingLeft="@dimen/activity_padding"
            android:paddingRight="@dimen/activity_padding"

            android:orientation="horizontal">

            <ImageView
                android:id="@+id/iv_small_poster"

                android:transitionName="@string/transition_poster"

                android:layout_width="@dimen/details_poster_width"
                android:layout_height="@dimen/details_poster_height"

                android:scaleType="centerInside"/>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"

                android:layout_weight="1"

                android:paddingLeft="@dimen/activity_padding"
                android:paddingRight="@dimen/activity_padding"
                android:paddingBottom="@dimen/activity_padding"

                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"

                    android:layout_marginRight="5dp"

                    android:text="@string/original_title"
                    android:textColor="@android:color/secondary_text_light"

                    style="@style/TextAppearance.AppCompat.Medium"/>

                <TextView
                    android:id="@+id/tv_original_title"

                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"

                    style="@style/TextAppearance.AppCompat.Medium"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"

                    android:layout_marginRight="5dp"

                    android:text="@string/year"
                    android:textColor="@android:color/secondary_text_light"

                    style="@style/TextAppearance.AppCompat.Medium"/>

                <TextView
                    android:id="@+id/tv_year"

                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"

                    style="@style/TextAppearance.AppCompat.Medium"/>

            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"

            android:padding="@dimen/activity_padding"

            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                android:layout_marginBottom="@dimen/activity_vertical_margin"

                android:text="@string/synopsis"

                style="@style/TextAppearance.AppCompat.Large"/>


            <TextView
                android:id="@+id/tv_synopsis"

                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                android:layout_marginBottom="@dimen/activity_vertical_margin"

                style="@style/TextAppearance.AppCompat.Medium"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:padding="@dimen/activity_padding"

            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                android:layout_marginBottom="@dimen/activity_vertical_margin"

                android:text="@string/trailers"

                style="@style/TextAppearance.AppCompat.Large"/>

            <com.paulocaldeira.movies.components.InfiniteRecyclerView
                android:id="@+id/rv_movie_videos"

                android:layout_width="match_parent"
                android:layout_height="match_parent"

                android:visibility="gone" />

            <ProgressBar
                android:id="@+id/pb_movie_videos"

                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                android:layout_gravity="center"/>

            <TextView
                android:id="@+id/tv_no_results_movie_videos"

                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                style="@style/TextAppearance.AppCompat.Medium"

                android:text="@string/no_results_were_found"

                android:visibility="gone"/>

            <TextView
                android:id="@+id/tv_error_movie_videos"

                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                style="@style/TextAppearance.AppCompat.Medium"

                android:text="@string/an_error_occurred_please_try_again"

                android:visibility="gone"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:padding="@dimen/activity_padding"

            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                android:layout_marginBottom="@dimen/activity_vertical_margin"

                android:text="@string/reviews"

                style="@style/TextAppearance.AppCompat.Large"/>

            <com.paulocaldeira.movies.components.InfiniteRecyclerView
                android:id="@+id/rv_movie_reviews"

                android:layout_width="match_parent"
                android:layout_height="match_parent"

                android:visibility="gone" />

            <ProgressBar
                android:id="@+id/pb_movie_reviews"

                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                android:layout_gravity="center"/>

            <TextView
                android:id="@+id/tv_no_results_movie_reviews"

                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                style="@style/TextAppearance.AppCompat.Medium"

                android:text="@string/no_results_were_found"

                android:visibility="gone"/>

            <TextView
                android:id="@+id/tv_error_movie_reviews"

                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                style="@style/TextAppearance.AppCompat.Medium"

                android:text="@string/an_error_occurred_please_try_again"

                android:visibility="gone"/>

        </LinearLayout>

    </LinearLayout>

</android.support.v4.widget.NestedScrollView>
