<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.paulocaldeira.movies.MainActivity">

    <android.support.v4.widget.SwipeRefreshLayout
        android:id="@+id/srl_loader"

        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:id="@+id/ll_no_internet"

                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                android:orientation="vertical"

                android:visibility="invisible"

                android:layout_gravity="center"
                android:gravity="center">

                <ImageView
                    android:layout_width="120dp"
                    android:layout_height="120dp"

                    android:src="@drawable/ic_portable_wifi_off_purple_48dp"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"

                    android:text="@string/please_check_your_internet_connection"

                    style="@style/Base.TextAppearance.AppCompat.Small"/>

            </LinearLayout>

            <LinearLayout
                android:id="@+id/ll_request_error"

                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                android:orientation="vertical"

                android:visibility="invisible"

                android:layout_gravity="center"
                android:gravity="center">

                <ImageView
                    android:layout_width="120dp"
                    android:layout_height="120dp"

                    android:src="@drawable/ic_error_purple_48dp"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"

                    android:text="@string/an_error_occurred_please_try_again"

                    style="@style/Base.TextAppearance.AppCompat.Small"/>

            </LinearLayout>

            <LinearLayout
                android:id="@+id/ll_no_results"

                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                android:orientation="vertical"

                android:visibility="invisible"

                android:layout_gravity="center"
                android:gravity="center">

                <ImageView
                    android:layout_width="120dp"
                    android:layout_height="120dp"

                    android:src="@drawable/ic_error_purple_48dp"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"

                    android:text="@string/no_results_were_found"

                    style="@style/Base.TextAppearance.AppCompat.Small"/>

            </LinearLayout>

            <com.paulocaldeira.movies.components.InfiniteRecyclerView
                android:id="@+id/rv_movies_images"

                android:layout_width="match_parent"
                android:layout_height="match_parent"/>

        </FrameLayout>

    </android.support.v4.widget.SwipeRefreshLayout>

</FrameLayout>
